# ScraperLLM

./: .coverage  .dockerignore  .env  .env.example  .gitignore  API_README.md  DEPLOYMENT.md  Dockerfile  Dockerfile.minimal  Dockerfile.optimized  Dockerfile.railway  Dockerfile.railway.optimized  Dockerfile.railway2  README.md  backup.sh  build_minimal.sh  deploy.sh  docker-compose.yml  healthcheck.sh  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements-llm.txt  requirements-minimal.txt  requirements-web.txt  requirements.txt  run_web.py
api/: main.py
api/core/: config.py  logging.py
api/routers/: query.py  scrape.py  status.py
api/services/: semantic_expander.py
checkpoints/model/eval/: Information-Retrieval_evaluation_results.csv
examples/: search_assistant_demo.py  search_cli.py  semantic_search_demo.py  semantic_search_example.py  test_llm_integration.py  train_model.py
fine_tuned_models/: README.md  training_metadata.json
fine_tuned_models/eval/: Information-Retrieval_evaluation_results.csv
nginx/: nginx.conf
scraper_llm/: __init__.py  __main__.py  cli.py  search_assistant.py
scraper_llm/core/: __init__.py  config.py  logging.py
scraper_llm/search/: __init__.py  base.py  semantic_search.py  serpapi_search.py  web.py
scraper_llm/utils/: __init__.py  content_processor.py  llm_integration.py  ner.py  results.py  semantic_search_utils.py
scraper_llm/web/: app.py
scraper_llm/web/static/: styles.css
scraper_llm/web/templates/: index.html
scripts/: download_model.py
tests/: __init__.py  conftest.py  test_search.py
