[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-llm"
version = "0.1.0"
description = "A web scraping and information extraction tool with NER capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "nltk>=3.8.1",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "flake8>=6.1.0",
    "pre-commit>=3.3.3",
    "pytest-mock>=3.11.1",
    "httpx>=0.24.1"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
